--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -1,15 +1,17 @@
 footer.footer
   .container
-    .foooter-parts
-      .foooter-parts__part
+    .footer-parts
+      .footer-parts__part
         p.footer__text Калининград, Каштановая аллея, 177Б
         a.footer__link.link.link--white(href="tel:84012564488") +7 (4012) 56-44-88
 
-      .foooter-parts__part
+      .footer-parts__part
         p.footer__text Советск, ул. Александра Невского, 2Б
         a.footer_link.link.link--white(href="tel:84016135200") +7 (40161) 3-52-00
-      .foooter-parts__part
+      .footer-parts__part
         a.footer__link.link.link--white(href="mailto:selektav@mail.ru") selektav@mail.ru, selektgr@mail.ru
         p.footer__text Все права защищены
+script(src='https://yastatic.net/jquery/3.3.1/jquery.min.js')
+script(async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDUlags8KVbNQxTok7RlaJNVUDtuJ0lRxU&callback=initMap')
 script(src='/js/libs.min.js')
 script(src='/js/bundle.js')
