--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -1,7 +1,7 @@
 header.header.header--fixed
   .container.header__container
-    .header__part.header__part--address
-      | Калининград, ул. Каштановая аллея, 177 Б  |  Советск, ул. Александра Невского, 2 Б
-    .header__part.header__part--contacts
+    .header__parts
+      .header__part.header__part--address Калининград, ул. Каштановая аллея, 177 Б  |  Советск, ул. Александра Невского, 2 Б
+      .header__part.header__part--phones +74012 915 333, 57-17-91, 57-17-92
 
 
